# online_store

./: .coverage  .gitignore  README.md  pyproject.toml
src/: category.py  models.py  product.py  utils.py
tests/: .coverage  test_category.py  test_models.py  test_product.py  test_utils.py
