[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Admin <ulb9@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
